src/tests/cases/snapshots/jett__tests__cases__ui__zoom_into_small_files-3.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[2]"
---
                                                                           2                                                                                                                  
                                                                                                                                     ─                                                ┬       
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                         file1                                                                                        │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                     392.0K (96%)                                                                                     │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx 
                                                                                                                                                                                      │xxxxxx│
                                                                                                                                                                                      │       
                                                                                                                                     ─                                                ┴       
                                                                                                                                                                                              
                                                                                                                                                                                              

